[package]
name = "rl-stats-ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.0"
proto-flow = { git = "https://github.com/estuary/flow.git" }
reqwest = { version = "0.11.20", features = ["rustls", "tokio-rustls", "async-compression", "multipart", "serde_json", "rustls-tls", "json", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["raw_value"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter", "time"] }
time = { version = "0.3.28", features = ["serde", "parsing", "formatting"] }
governor = "0.6.0"
schemars = "0.8.13"

[dev-dependencies]
insta = { version = "1.31.0", features = ["serde", "json"] }
